--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -1,7 +1,7 @@
 ---
 title: "WUP_04"
-author: "Put your name here!"
-date: "fall 2023"
+author: "Netalia Ventura"
+date: "March 6, 2025"
 output:
   html_document:
     df_print: paged
